--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,5 +24,5 @@ a {
 }
 
 .primary-button {
-  @apply rounded bg-purple-500 py-2 px-4 shadow outline-none hover:bg-rose-500 active:bg-amber-500;
+  @apply rounded bg-purple-500 py-2 px-4 shadow outline-none hover:bg-green-400 active:bg-green-300;
 }
