--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,7 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  @apply text-pink-500 hover:text-gray-600;
 }
 
 * {
@@ -24,7 +23,7 @@ a {
 }
 
 .primary-button {
-  @apply rounded bg-purple-500 py-2 px-4 shadow outline-none hover:bg-green-400 active:bg-green-300;
+  @apply rounded bg-purple-500 py-2 px-4 shadow outline-none hover:bg-pink-500 active:bg-green-300;
 }
 .tertiary-button {
   @apply rounded-full bg-rose-500 py-1 px-4 shadow outline-none hover:bg-rose-400 active:bg-green-300;
@@ -37,4 +36,8 @@ input,
 select,
 textarea {
   @apply rounded-full border p-2 outline-none ring-indigo-300 focus:ring;
+}
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-gray-200;
 }
