--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,10 +23,13 @@ a {
 }
 
 .primary-button {
-  @apply rounded bg-purple-500 py-2 px-4 shadow outline-none hover:bg-pink-500 active:bg-green-300;
+  @apply rounded bg-pink-500 py-2 px-4 shadow outline-none hover:bg-gray-400 active:bg-gray-300;
+}
+.default-button {
+  @apply rounded-full bg-cyan-300 py-1 px-4 text-white shadow outline-none hover:bg-cyan-200 active:bg-gray-300;
 }
 .tertiary-button {
-  @apply rounded-full bg-rose-500 py-1 px-4 shadow outline-none hover:bg-rose-400 active:bg-green-300;
+  @apply rounded-full bg-rose-500 py-1 px-4 shadow outline-none hover:bg-rose-400 active:bg-gray-300;
 }
 #Login {
   padding-top: 20px;
